--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"json5": "^2.2.3",
 		"jszip": "^3.10.1",
 		"lodash-es": "^4.17.21",
-		"rgb-hex": "^4.1.0",
-		"type-fest": "^4.33.0"
+		"rgb-hex": "^4.1.0"
 	},
 	"devDependencies": {
 		"@lusc/eslint-config": "^4.1.0",
